--- a/.github/workflows/run-junit.yml
+++ b/.github/workflows/run-junit.yml
@@ -15,7 +15,7 @@ jobs:
           java-version: '11'
       - name: Build and Run Tests
         run: |
-          javac -d target -cp target:./lib/junit-platform-console-standalone-1.9.0-RC1.jar:./lib/hamcrest-core-1.3:./lib/junit-4.13.2.jar src/*.java
+          javac -d target -cp target:./lib/junit-platform-console-standalone-1.9.0-RC1.jar:./lib/hamcrest-core-1.3:./lib/junit-4.13.2.jar src/*/*/MainTest.java
           cp -r ./src/archives ./target
           java -jar ./lib/junit-platform-console-standalone-1.9.0-RC1.jar --class-path target --scan-class-path --reports-dir=reports
         # execute your tests generating test results
