--- a/.github/workflows/run-junit.yml
+++ b/.github/workflows/run-junit.yml
@@ -15,9 +15,8 @@ jobs:
           java-version: '11'
       - name: Build and Run Tests
         run: |
-          javac -d target -cp target:./lib/junit-platform-console-standalone-1.9.0-RC1.jar:./lib/hamcrest-core-1.3:./lib/junit-4.13.2.jar src/**/**/**/MainTest.java
-          cp -r ./src/archives ./target
-          java -jar ./lib/junit-platform-console-standalone-1.9.0-RC1.jar --class-path target --scan-class-path --reports-dir=reports
+          javac -d bin -cp "lib/*:." -sourcepath src ./src/**/**/*.java
+          java -jar lib/junit-platform-console-standalone-1.9.0-M1.jar --class-path bin --scan-class-path --fail-if-no-tests
         # execute your tests generating test results
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v1
