--- a/.github/workflows/run-junit.yml
+++ b/.github/workflows/run-junit.yml
@@ -14,8 +14,9 @@ jobs:
           distribution: 'zulu'
           java-version: '16.0.1'
       - name: Build and Run Tests
+        
         run: |
-          javac -d bin -cp "lib/*:." -sourcepath src ./src/**/**/*.java
+          javac -d bin -cp "lib/*:." -sourcepath src ./src/**/**/*.java &&
           java -jar lib/junit-platform-console-standalone-1.9.0-M1.jar --class-path bin --scan-class-path --fail-if-no-tests
         # execute your tests generating test results
       - name: Publish Test Results
