--- a/.github/workflows/run-junit.yml
+++ b/.github/workflows/run-junit.yml
@@ -18,7 +18,7 @@ jobs:
           javac -d bin -cp "lib/*:." -sourcepath src ./src/**/**/*.java
       - name: Run Tests
         run: |
-          java -jar lib/junit-platform-console-standalone-1.9.0-M1.jar --class-path bin --scan-class-path --fail-if-no-tests
+          java -jar lib/junit-platform-console-standalone-1.9.0.jar --class-path bin --scan-class-path --fail-if-no-tests
         # execute your tests generating test results
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v1
