--- a/.github/workflows/run-junit.yml
+++ b/.github/workflows/run-junit.yml
@@ -12,12 +12,16 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: '16.0.1'
+
       - name: Build Tests
         run: |
-          javac -d bin -cp "lib/*:." -sourcepath src ./src/**/**/*.java
+          javac -d /bin -cp "lib/*:." -sourcepath src ./src/**/**/*.java
+          mkdir -p $GITHUB_WORKSPACE/bin
+          cp -r bin/* $GITHUB_WORKSPACE/bin
+
       - name: Run Tests
         run: |
-          java -jar lib/junit-platform-console-standalone-1.9.0.jar --class-path bin --scan-class-path --fail-if-no-tests
+          java -jar lib/junit-platform-console-standalone-1.9.0.jar --class-path bin --scan-class-path --fail-if-no-tests -cp $GITHUB_WORKSPACE/bin
         # execute your tests generating test results
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v1
