--- a/.github/workflows/run-junit.yml
+++ b/.github/workflows/run-junit.yml
@@ -20,6 +20,7 @@ jobs:
           
       - name: Run Tests
         run: |
+          ls -la $GITHUB_WORKSPACE/bin
           java -jar lib/junit-platform-console-standalone-1.9.0.jar --class-path $GITHUB_WORKSPACE/bin --scan-class-path --fail-if-no-tests
         # execute your tests generating test results
       - name: Publish Test Results
