--- a/.github/workflows/run-junit.yml
+++ b/.github/workflows/run-junit.yml
@@ -13,15 +13,25 @@ jobs:
         with:
           java-version: '16.0.1'
 
+      - name: Cache Build Directory
+        uses: actions/cache@v1
+        with:
+          paths:
+            - ~/bin
+          key: ${{ runner.os }}-build-cache
+          restore-keys:
+            - ${{ runner.os }}-build-cache
+          restore-paths:
+            - ~/bin
+
       - name: Build Tests
         run: |
-          mkdir -p $GITHUB_WORKSPACE/bin
-          javac -d $GITHUB_WORKSPACE/bin -cp "lib/*:." -sourcepath src ./src/**/**/*.java
+          javac -d bin -cp "lib/*:." -sourcepath src ./src/**/**/*.java
           
       - name: Run Tests
         run: |
-          ls -la $GITHUB_WORKSPACE/bin
-          java -jar lib/junit-platform-console-standalone-1.9.0.jar --class-path $GITHUB_WORKSPACE/bin --scan-class-path --fail-if-no-tests
+          ls -la bin
+          java -jar lib/junit-platform-console-standalone-1.9.0.jar --class-path bin --scan-class-path --fail-if-no-tests
         # execute your tests generating test results
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v1
