--- a/.github/workflows/run-junit.yml
+++ b/.github/workflows/run-junit.yml
@@ -16,7 +16,7 @@ jobs:
         run: |
           [[ -d bin ]] || mkdir bin
           javac -d bin -sourcepath src -cp "lib/*" $(find -name *.java)
-          java --class-path bin org.junit.runner.JUnitCore --scan-class-path
+          java -jar lib/junit-platform-console-standalone-1.9.0.jar --class-path bin --scan-class-path --fail-if-no-tests
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v1
         if: always()
