--- a/.github/workflows/run-junit.yml
+++ b/.github/workflows/run-junit.yml
@@ -15,8 +15,9 @@ jobs:
       - name: Build and Test
         run: |
           [[ -d bin ]] || mkdir bin
+          [[ -d reports ]] || mkdir reports
           javac -d bin -sourcepath src -cp "lib/*" $(find -name *.java)
-          java -jar lib/junit-platform-console-standalone-1.9.0.jar --class-path bin --scan-class-path --fail-if-no-tests
+          java -jar lib/junit-platform-console-standalone-1.9.0.jar --class-path bin --scan-class-path --fail-if-no-tests --output-to reports/junit-report.xml
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v1
         if: always()
