--- a/.github/workflows/run-junit.yml
+++ b/.github/workflows/run-junit.yml
@@ -22,4 +22,4 @@ jobs:
         uses: EnricoMi/publish-unit-test-result-action@v1
         if: always()
         with:
-          files: "reports/**/*.xml"
+          files: "reports/*.xml"
