--- a/.github/workflows/run-junit.yml
+++ b/.github/workflows/run-junit.yml
@@ -10,9 +10,11 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v1
+
       - uses: actions/setup-java@v1
         with:
           java-version: '16.0.1'
+
       - name: Build and Test
         run: |
           [[ -d bin ]] || mkdir bin
@@ -20,8 +22,11 @@ jobs:
           javac -d bin -sourcepath src -cp "lib/*" $(find -name *.java)
           java -jar lib/junit-platform-console-standalone-1.9.0.jar --class-path bin --scan-class-path --fail-if-no-tests --reports-dir reports
 
-      - name: Publish Report
-        uses: EnricoMi/publish-unit-test-result-action@v1
+      - name: Publish Unit Test Results
         if: always()
+        uses: docker://ghcr.io/enricomi/publish-unit-test-result-action:v1.9
         with:
-          files: "reports/**/*.xml"
+          github_token: ${{ github.token }}
+          files: ./reports/**/*.xml
+          check_name: Unit Test Results
+          comment_on_pr: true
